--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
         <spring.version>4.3.9.RELEASE</spring.version>
+        <spring-data-jpa.version>1.8.0.RELEASE</spring-data-jpa.version>
 
         <!-- Logging -->
         <logback.version>1.2.3</logback.version>
@@ -103,9 +104,9 @@
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-orm</artifactId>
-            <version>${spring.version}</version>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>${spring-data-jpa.version}</version>
         </dependency>
 
         <!--DataBase-->
