--- a/pom.xml
+++ b/pom.xml
@@ -41,8 +41,9 @@
         <!--TomCat -->
         <tomcat.version>7.0.78</tomcat.version>
 
-
         <jackson-json.version>2.8.10</jackson-json.version>
+
+        <spring-security.version>4.2.1.RELEASE</spring-security.version>
     </properties>
 
     <build>
@@ -209,6 +210,11 @@
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-ehcache</artifactId>
             <version>${hibernate.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-taglibs</artifactId>
+            <version>${spring-security.version}</version>
         </dependency>
 
         <!--http://hibernate.org/validator/documentation/getting-started/#unified-expression-language-el-->
